# file.ia

./: Makefile  README.md  pyproject.toml
src/: asgi.py  main.py  settings.py
src/.chainlit/: config.toml
src/env/local/: .env
src/modules/: cl.py  prompts.py
tests/: test_cl.py  test_main.py  test_prompts.py
